Fixed overlap bug between landing page and articles.

--- a/css/css.css
+++ b/css/css.css
@@ -25,8 +25,8 @@ h5 {
 /* Landing page */
 .box {
     position: absolute;
-    /*width: 715px;
-    height: 272px;*/
+    width: 801px;
+    height: 373px;
     left: 49vw;
     top: 71vh;
     background: url(images/landing/box.png);
